<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff">
    <TextView
        android:padding="2dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:layout_gravity="left|center"
        android:textColor="#8b807b"
        android:text="@string/file_path"/>
    <TextView
        android:id="@+id/text_path_file"
        android:padding="2dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textStyle="bold"
        android:lines="1"
        android:layout_gravity="left|center"
        android:textColor="#000000"
       />
    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="#8b807b"/>
    <TextView
        android:padding="2dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:layout_gravity="left|center"
        android:textColor="#8b807b"
        android:text="@string/date_added"/>
    <TextView
        android:id="@+id/text_date_added"
        android:padding="2dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_gravity="left|center"
        android:textColor="#000000"
       />
    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="#8b807b"/>
    <TextView
        android:padding="2dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:layout_gravity="left|center"
        android:textColor="#8b807b"
        android:text="@string/file_size"/>
    <TextView
        android:id="@+id/text_size"
        android:padding="2dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_gravity="left|center"
        android:textColor="#000000"
      />
    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="#8b807b"/>
    <TextView
        android:padding="2dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:layout_gravity="left|center"
        android:textColor="#8b807b"
        android:text="@string/dimension"/>
    <TextView
        android:id="@+id/text_dimen"
        android:padding="2dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_gravity="left|center"
        android:textColor="#000000"
        />
    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="#8b807b"/>
    <TextView
        android:padding="2dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:layout_gravity="left|center"
        android:textColor="#8b807b"
        android:text="@string/type"/>
    <TextView
        android:id="@+id/text_type"
        android:padding="2dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_gravity="left|center"
        android:textColor="#000000"
        />
    <TextView
        android:id="@+id/ok_butt"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:text="OK"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_gravity="center"
        android:gravity="center"
        android:background="@drawable/dialog_butt"
        android:textColor="#ffffff"
        />
</LinearLayout>